# novelai-gui

./: .gitignore  NovelAI-API-Docs.md  README.md  index.html  package-lock.json  package.json
scripts/: generate-icons.mjs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
