[package]
name = "novelai-gui"
version = "0.1.0"
description = "A desktop GUI for NovelAI image generation"
authors = ["Dongshan Randeng"]
edition = "2021"

[lib]
name = "novel_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
dirs = "5"
keyring = { version = "3", features = ["windows-native"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zip = "2"
